Init first post

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="{{"/" | relative_url }}">Nhà kìa</a>
+					<a class="nav-link" href="{{"/" | relative_url }}">Ơ, Nhà kìa</a>
 				</li>
 
 				<li class="nav-item">
