--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,6 +36,7 @@ layout: default
 					<h3 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h3>
 					{% endif %}
 				</a>
+
 				<p class="post-meta">Posted by
 					{% if post.author %}
 					{{ post.author }}
@@ -53,7 +54,7 @@ layout: default
 
 			<!-- Pager -->
 			<div class="clearfix">
-				<a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">View All Posts &rarr;</a>
+				<a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">Xem Dino viết gì nào &rarr;</a>
 			</div>
 		</div>
 	</div>
