Cleanup scss folder

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -2,7 +2,8 @@
 
 @import "./bootstrap/bootstrap.scss";
 
-// Import Core Clean Blog SCSS
-@import "./clean-blog-theme/styles.scss";
+@import "global";
+
+@import "./sections/autoload.scss";
 
 @import "./components/autoload.scss";
