--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,6 @@
 	<link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-	<link rel="icon" type="image/png" sizes="16x16" href="/img/logo.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{site.mediaurl}}/logo.png">
 
 </head>
