--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 <!-- Override default navbar of Clean Blog theme -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 	<div class="container">
-		<a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a>
+		<a class="navbar-brand" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
 
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			Menu
@@ -12,15 +12,15 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="{{"/" | relative_url }}">Ơ, Nhà kìa</a>
+					<a class="nav-link" href="{{ '/' | relative_url }}">Ơ, Nhà kìa</a>
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="{{"/about" | relative_url }}">Về Đông</a>
+					<a class="nav-link" href="{{ '/about' | relative_url }}">Về Đông</a>
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="{{ "/posts" | relative_url }}">Bài Viết</a>
+					<a class="nav-link" href="{{ '/posts' | relative_url }}">Bài Viết</a>
 				</li>
 
 				<!-- <li class="nav-item">
